--- a/vjezba-13/index.html
+++ b/vjezba-13/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <html lang="hr">
 <head>
-    <title>Vježba 12 css</title>
+    <title>Vježba 13</title>
     <meta http-equiv="content-type" content="text/html; charset=UTF-8">
     <meta name="description" content="">
     <meta name="keywords" content="">
@@ -9,14 +9,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
     <style>
-        p{
-            color: green;
+        #red{
+            color: red;
         }
     </style>
 </head>
 <body>
     <h1>This is a Heading</h1>
     <p>This is a paragraph.</p>
-    <p>This is another paragraph.</p>
+    <p id="red">This is another paragraph.</p>
 </body>
 </html>
